# verilog2spinalhdl

./: Cargo.toml  index.html  style.css  verilog2spinalhdl-6a8dd3c147d3fe05.js  verilog2spinalhdl-6a8dd3c147d3fe05_bg.wasm
.github/workflow/: rust.yml
src/: app.rs  convert.rs  example.rs  main.rs
src/convert/: io.rs  mod.rs  module.rs
