[package]
name = "verilog2spinalhdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
yew = "0.19.3"
# yew-agent = "0.1.0"
# rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", version = "0.1.2", default-features = false, features = ["compiler"] }
gloo = { version = "0.8", features = ["futures"] }
gloo-timers = { version = "0.2.2", features = ["futures"] }

[dependencies.monaco]
version = "0.3.0"
default-features = false
features = ["yew-components"]
git = "https://github.com/siku2/rust-monaco"

[dependencies.web-sys]
version = "0.3.59"
features = [
    "File",
    "MessageEvent",
    "WebSocket",]
